--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js",
     "sass": "sass scss:public/css",
     "watch": "npm run sass -- --watch",
-    "build": "run-p sass server",
+    "build": "run-p server",
     "server": "run-p watch dev",
     "dev": "nodemon server"
   },
