--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "build": "run-p server",
     "server": "run-p watch dev",
     "dev": "nodemon server",
     "heroku-postbuild": "npm run build"
