--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "run-p server",
-    "server": "run-p watch dev",
+    "server": "run-p dev",
     "dev": "nodemon server",
     "heroku-postbuild": "npm run build"
   },
