--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "npm": "8.5.5"
   },
   "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "npm run build"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
