--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "npm": "8.5.5"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "rm -rf dist && mkdir dist && cp public/index.html dist/ && cp -r public dist/",
+    "dev": "npm run build && node server",
+    "vercel-build": "npm run build"
   },
   "keywords": [],
   "author": "",
