--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "api/index.js", "use": "@vercel/node" },
-      { "src": "dist/**", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "/api/index.js" },
-      { "src": "/(.*)", "dest": "/dist/index.html" }
-    ]
-  }
-  
+	"version": 2,
+	"builds": [
+		{ "src": "server.js", "use": "@vercel/node" },
+		{ "src": "public/**", "use": "@vercel/static" }
+	],
+	"routes": [
+		{ "src": "/api/(.*)", "dest": "server.js" },
+		{ "src": "/(.*)", "dest": "public/$1" },
+		{ "handle": "filesystem" },
+		{ "src": "/(.*)", "dest": "server.js" }
+	]
+}
